# QuaNNTO

./: README.md  pyproject.toml  requirements.txt  setup.py
curve_fitting_datasets/: sincos_testset_lin.csv  sincos_testset_lin_features.csv  sincos_testset_rand.csv  sincos_testset_rand_features.csv  sincos_trainset.csv  sincos_trainset_features.csv
datasets/: banknote_auth_outputs.npy  catstate_phi0.0_trainsize1_rng-1to1_outputs.npy  catstate_phi0.0_trainsize1_stats15_cut20_rng-1to1_outputs.npy  catstate_phi0.0_trainsize50_rng-1to1_outputs.npy  circles_inputs.npy  circles_outputs.npy  cubicphase_gamma0.05_trainsize50_rng-2.0to2.0_outputs.npy  cubicphase_gamma0.0_trainsize50_rng-2.0to2.0_inputs.npy  cubicphase_gamma0.0_trainsize50_rng-2.0to2.0_outputs.npy  cubicphase_gamma0.2_trainsize50_rng-2.0to2.0_outputs.npy  cubicphase_gamma0.5_trainsize50_rng-2.0to2.0_outputs.npy  curvefitting_abs_1in_1out_trainsize100_noise0.1_rng-3to3_outputs.npy  curvefitting_cosh_1in_1out_trainsize100_noise3_rng-5to5_outputs.npy  curvefitting_five_1in_1out_trainsize100_noise5_rng-3to3_outputs.npy  curvefitting_gauss_1in_1out_trainsize100_noise0.1_rng-5to5_outputs.npy  curvefitting_log_function_1in_1out_trainsize100_noise0.1_rng0.01to10_inputs.npy  curvefitting_log_function_1in_1out_trainsize100_noise0.1_rng0.01to10_outputs.npy  curvefitting_rational_1in_1out_trainsize100_noise0.1_rng-3to3_inputs.npy  curvefitting_rational_1in_1out_trainsize100_noise0.1_rng-3to3_outputs.npy  curvefitting_sin_1in_1out_trainsize100_noise0.1_rng-6.3to6.3_inputs.npy  diabetes_5features.csv  mnist_8features.csv  (+103 more)
(+933 files in other folders)
