[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["quannto*"]


[project]
name = "quannto"
version = "0.1.0"
description="QuaNNTO: Exact simulator of CV Quantum Optical Neural Networks"
requires-python = ">=3.10"
dependencies = [
  "jax",
  "jsonpickle",
  "matplotlib",
  "numpy",
  "optax",
  "scikit-learn",
  "scipy",
  "seaborn",
  "sympy",
]

[project.optional-dependencies]
mnist = ["tensorflow"]
sf = ["strawberryfields"]
dev = ["pip-tools", "deptry", "pytest"]